[gd_scene load_steps=6 format=3 uid="uid://j6n24hs0xavf"]

[ext_resource type="Shader" path="res://Art/UI/player_slot_panel.gdshader" id="1_04gfn"]
[ext_resource type="Script" path="res://Scripts/UI/Lobby/battle_player_slot_panel.gd" id="2_ifloy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aw5fe"]
shader = ExtResource("1_04gfn")

[sub_resource type="Theme" id="Theme_ojgk6"]
default_font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o72rm"]
resource_local_to_scene = true
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(1, 1, 1, 1)

[node name="BattlePlayerSlotPanel" type="PanelContainer"]
material = SubResource("ShaderMaterial_aw5fe")
custom_minimum_size = Vector2(0, 100)
anchors_preset = 10
anchor_right = 1.0
offset_right = -1317.0
offset_bottom = 251.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = SubResource("Theme_ojgk6")
theme_override_styles/panel = SubResource("StyleBoxFlat_o72rm")
script = ExtResource("2_ifloy")

[node name="GeneralVContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopBarHContainer" type="HBoxContainer" parent="GeneralVContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayerInfoPanel" type="Panel" parent="GeneralVContainer/TopBarHContainer"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2

[node name="Label" type="Label" parent="GeneralVContainer/TopBarHContainer/PlayerInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Zdzichu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionButtonBot" type="OptionButton" parent="GeneralVContainer/TopBarHContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
allow_reselect = true

[node name="ButtonTakeLeave" type="Button" parent="GeneralVContainer/TopBarHContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "Take"

[node name="ButtonColor" type="Button" parent="GeneralVContainer/TopBarHContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Color"

[node name="OptionButtonTeam" type="OptionButton" parent="GeneralVContainer/TopBarHContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "Team"
popup/item_0/id = 0

[node name="ButtonLevelUp" type="Button" parent="GeneralVContainer/TopBarHContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
disabled = true
text = "Level"

[node name="OptionButtonHero" type="OptionButton" parent="GeneralVContainer/TopBarHContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text_overrun_behavior = 3
item_count = 1
selected = 0
fit_to_longest_item = false
popup/item_0/text = "Hero"
popup/item_0/id = 0

[node name="TimerContainer" type="GridContainer" parent="GeneralVContainer"]
layout_mode = 2
columns = 3

[node name="Timer note" type="PanelContainer" parent="GeneralVContainer/TimerContainer"]
custom_minimum_size = Vector2(250, 30)
layout_direction = 2
layout_mode = 2

[node name="Label" type="Label" parent="GeneralVContainer/TimerContainer/Timer note"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Timer [min][sec]:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReserveTime_Min_Edit" type="SpinBox" parent="GeneralVContainer/TimerContainer"]
layout_mode = 2
max_value = 60.0
value = 3.0
alignment = 1

[node name="ReserveTime_Sec_Edit" type="SpinBox" parent="GeneralVContainer/TimerContainer"]
layout_mode = 2
max_value = 59.0
alignment = 1

[node name="Timer note2" type="PanelContainer" parent="GeneralVContainer/TimerContainer"]
custom_minimum_size = Vector2(250, 30)
layout_direction = 2
layout_mode = 2

[node name="Label" type="Label" parent="GeneralVContainer/TimerContainer/Timer note2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "increment [sec]:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pad" type="Control" parent="GeneralVContainer/TimerContainer"]
layout_mode = 2

[node name="IncrementTimeEdit" type="SpinBox" parent="GeneralVContainer/TimerContainer"]
layout_mode = 2
min_value = 1.0
max_value = 120.0
value = 2.0
alignment = 1

[node name="OptionButtonUnit1" type="OptionButton" parent="GeneralVContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="OptionButtonUnit2" type="OptionButton" parent="GeneralVContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="OptionButtonUnit3" type="OptionButton" parent="GeneralVContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="OptionButtonUnit4" type="OptionButton" parent="GeneralVContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text_overrun_behavior = 3
fit_to_longest_item = false

[node name="OptionButtonUnit5" type="OptionButton" parent="GeneralVContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text_overrun_behavior = 3
fit_to_longest_item = false

[connection signal="pressed" from="GeneralVContainer/TopBarHContainer/ButtonTakeLeave" to="." method="_on_button_take_leave_pressed"]
[connection signal="pressed" from="GeneralVContainer/TopBarHContainer/ButtonColor" to="." method="_on_button_color_pressed"]
[connection signal="item_selected" from="GeneralVContainer/TopBarHContainer/OptionButtonTeam" to="." method="_on_option_button_team_item_selected"]
[connection signal="pressed" from="GeneralVContainer/TopBarHContainer/ButtonLevelUp" to="." method="_on_button_level_up_pressed"]
[connection signal="value_changed" from="GeneralVContainer/TimerContainer/ReserveTime_Min_Edit" to="." method="timer_changed"]
[connection signal="value_changed" from="GeneralVContainer/TimerContainer/ReserveTime_Sec_Edit" to="." method="timer_changed"]
[connection signal="value_changed" from="GeneralVContainer/TimerContainer/IncrementTimeEdit" to="." method="timer_changed"]
